--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "lqip-loader": "^2.2.0",
     "next": "9.5.1",
+    "next-optimized-images": "^2.6.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "responsive-loader": "^2.0.0",
+    "sharp": "^0.25.4",
+    "styled-components": "^5.1.1",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
