--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
     "next": "9.5.1",
     "next-optimized-images": "^2.6.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "reselect": "^4.0.0",
     "responsive-loader": "^2.0.0",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
