--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "hoist-non-react-statics": "^3.3.2",
     "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
     "next": "9.5.1",
