--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.2",
+    "formik": "^2.1.5",
     "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
     "next": "9.5.1",
@@ -25,7 +25,8 @@
     "responsive-loader": "^2.0.0",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
-    "webp-loader": "^0.6.0"
+    "webp-loader": "^0.6.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
