--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "cloudinary-core": "^2.11.2",
+    "cloudinary-react": "^1.6.6",
     "formik": "^2.1.5",
     "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
