--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cloudinary-core": "^2.11.2",
     "cloudinary-react": "^1.6.6",
     "formik": "^2.1.5",
+    "googleapis": "^59.0.0",
     "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
     "next": "9.5.1",
     "next-optimized-images": "^2.6.2",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "responsive-loader": "^2.0.0",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
+    "util": "^0.12.3",
+    "uuid": "^8.3.0",
     "webp-loader": "^0.6.0",
     "yup": "^0.29.3"
   },
