--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary-core": "^2.11.2",
     "cloudinary-react": "^1.6.6",
     "formik": "^2.1.5",
+    "framer-motion": "^2.5.5",
     "googleapis": "^59.0.0",
     "immer": "^7.0.7",
     "lqip-loader": "^2.2.0",
