--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "responsive-loader": "^2.0.0",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
+    "typescript": "^4.2.3",
     "util": "^0.12.3",
     "uuid": "^8.3.0",
     "webp-loader": "^0.6.0",
