--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "immer": "^7.0.7",
     "lodash": "^4.17.20",
     "lqip-loader": "^2.2.0",
-    "next": "9.5.1",
+    "next": "10.0.8",
     "next-optimized-images": "^2.6.2",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-elastic-carousel": "^0.11.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
