--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "responsive-loader": "^2.0.0",
+    "sass": "^1.32.8",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
     "typescript": "^4.2.3",
