--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     },
     "rules": {
         "no-use-before-define": "off",
+        "react/prop-types": 0,
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
