--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "classnames": "^2.3.0",
     "cloudinary-core": "^2.11.2",
     "cloudinary-react": "^1.6.6",
     "formik": "^2.1.5",
@@ -49,6 +50,7 @@
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.6.0",
@@ -61,6 +63,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "postcss": "^8.2.9",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^2.0.4"
   }
 }
