--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.9.0",
     "axios": "^0.19.2",
     "classnames": "^2.3.0",
+    "cloudinary": "^1.25.1",
     "cloudinary-core": "^2.11.2",
     "cloudinary-react": "^1.6.6",
     "formik": "^2.1.5",
