--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@reach/dialog": "^0.15.0",
     "@supabase/supabase-js": "^1.9.0",
     "axios": "^0.19.2",
     "classnames": "^2.3.0",
