--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "16.13.1",
     "react-elastic-carousel": "^0.11.3",
     "react-image-lightbox": "^5.1.1",
+    "react-intersection-observer": "^8.31.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
