--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@next/bundle-analyzer": "^10.2.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
