--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reach/dialog": "^0.15.0",
+    "@sentry/nextjs": "^6.4.0",
     "@supabase/supabase-js": "^1.9.0",
     "axios": "^0.19.2",
     "classnames": "^2.3.0",
